通过方法引用获取Field